<resources>
    <string name="app_name">Toeic Practice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab1">TEST</string>
    <string name="tab2">TRICKS</string>
    <string name="tab4">SETTINGS</string>
    <string name="tab3">VOCABULARY</string>
    <string name="tab5">QUESTION</string>

    <string name="splash">Thanh Hải IT Copyright  (C) 2017</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- LogInFragment-->
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Checking</string>
    <string name="title_activity_chat">Chat</string>

    <!-- RegisterFragment-->
    <string name="error_fields_empty">Please make sure you enter display name, email and password or other display name with Admin and admin!</string>
    <string name="error_incorrect_email_pass">Provide correct email and password with more than 6 characters.</string>
    <string name="title_chat">Room Chat English</string>
    <string name="default_time">12:12 5/5/2017</string>
    <string name="title_dialog_login">Enter your email address here</string>

    <!-- ChangePassword -->
    <string name="error_pass_fields_empty">Please make sure you enter current password, new password and verify password!</string>
    <string name="error_incorrect_pass">Provide correct password with more than 6 characters.</string>
    <string name="error_incorrect_verify_pass">Please make sure you enter correct verify password.</string>
    <string name="error_change_password_failed">Change password failed!</string>
    <string name="error_incorrect_current_pass">You have entered the wrong existing current password.</string>

    <string name="enter_question">Enter the question you want to send</string>
    <string name="enter_answer_a">Enter answer A</string>
    <string name="enter_answer_b">Enter answer B</string>
    <string name="enter_answer_c">Enter answer C</string>
    <string name="enter_answer_d">Enter answer D</string>

    <string name="vocabulary_test">Mời bạn chọn bài bên dưới để kiểm tra từ vựng nhé!</string>

</resources>
