<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_test"
        android:checked="true"
        android:icon="@drawable/test"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tricks"
        android:checked="false"
        android:icon="@drawable/tricks"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_vocabulary"
        android:checked="false"
        android:icon="@drawable/vocabulary"
        android:title="@string/tab3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_conatct"
        android:checked="false"
        android:icon="@drawable/contact"
        android:title="@string/tab5"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:checked="false"
        android:icon="@drawable/setting"
        android:title="@string/tab4"
        app:showAsAction="ifRoom" />
</menu>