<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="thanhhai.com.toeicpractice.Fragment.QuestionOnlineFragment">

    <TextView
        android:padding="10dp"
        android:background="@drawable/cardview_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question Online"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_above="@+id/lnCauHoi"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:id="@+id/lnCauHoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/txtCauHoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_online"
            android:layout_marginRight="@dimen/question_online"
            android:hint="@string/enter_question"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/txtAnswer_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_online"
            android:layout_marginRight="@dimen/question_online"
            android:hint="@string/enter_answer_a"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/txtAnswer_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_online"
            android:layout_marginRight="@dimen/question_online"
            android:hint="@string/enter_answer_b"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/txtAnswer_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_online"
            android:layout_marginRight="@dimen/question_online"
            android:hint="@string/enter_answer_c"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/txtAnswer_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_online"
            android:layout_marginRight="@dimen/question_online"
            android:hint="@string/enter_answer_d"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnPushQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/log_in_margin"
            android:layout_marginRight="@dimen/log_in_margin"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_login_button"
            android:text="SUBMIT"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</RelativeLayout>